--- a/root/index.html
+++ b/root/index.html
@@ -3,6 +3,13 @@
         <title>Example</title>
     </head>
     <body>
+        
         <p>This is an example of a simple HTML page with one paragraph.</p>
+        <p id="demo"></p>
+
+        <script>
+            document.getElementById("demo").innerHTML = 5 + 6;
+        </script>
+        
     </body>
 </html>
